# VC-Co-PIlot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  log.md
backend/: .env  Dockerfile  alembic.ini  pyproject.toml  ruff_output.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_knowledge_graph.py  003_chat_tables.py  004_artifact_tables.py  685016100768_initial.py  add_vision_support.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: artifacts.py  auth.py  benchmarks.py  brain.py  chat.py  documents.py  scenarios.py  scoring.py  valuation.py  vision.py  workspaces.py
backend/app/core/agents/: __init__.py  base.py  competitive_intel_agent.py  dataroom_concierge.py  dataroom_concierge_agent.py  deck_architect.py  deck_architect_agent.py  general_agent.py  icp_profiler.py  icp_profiler_agent.py  kpi_dashboard.py  kpi_dashboard_agent.py  lean_modeler.py  lean_modeler_agent.py  llm_client.py  market_oracle.py  market_research_agent.py  pre_mortem_critic.py  pre_mortem_critic_agent.py  qa_simulator.py  qa_simulator_agent.py  registry.py  research_agent.py  response.py  router.py  storyteller.py  storyteller_agent.py  valuation_strategist.py  valuation_strategist_agent.py  venture_analyst_agent.py  venture_architect.py  venture_architect_agent.py  vision_analyst_agent.py
backend/app/core/artifacts/: __init__.py  content_schemas.py  diff_engine.py  manager.py
backend/app/core/benchmarks/: benchmark_data.json  benchmark_engine.py
backend/app/core/brain/: __init__.py  startup_brain.py
backend/app/core/router/: intent_classifier.py  moe_router.py  types.py
backend/app/core/scenario/: scenario_modeler.py
backend/app/core/scoring/: readiness_scorer.py  scoring_rubric.yaml
backend/app/core/skills/: __init__.py  skill_loader.py
backend/app/core/tools/: __init__.py  (+17 more)
backend/app/mcp/: __init__.py  analytics_server.py  brain_server.py  mcp_client.py  memory_server.py  research_server.py
backend/app/middleware/: metrics.py  rate_limiter.py
backend/app/models/: __init__.py  agent_memory.py  artifact.py  base.py  chat.py  document.py  kg_entity.py  kg_event.py  user.py  venture.py  visual_content.py  workspace.py
backend/app/schemas/: artifact.py  auth.py  benchmark.py  brain.py  chat.py  document.py  documents.py  scenario.py  scoring.py  valuation.py  vision.py  workspace.py
backend/app/services/: embedding_service.py  embeddings.py  extraction.py  storage.py  storage_service.py
backend/app/templates/: base.html.j2
backend/app/workers/: celery_app.py  document_tasks.py  export_tasks.py  vision_tasks.py
backend/scripts/: seed_user.py
backend/tests/: conftest.py
backend/tests/integration/: test_artifacts_api.py  test_auth.py  test_brain.py  test_chat.py  test_health.py  test_workspaces.py
backend/tests/unit/: test_advanced_mcp.py  test_agent_registry.py  test_agents.py  test_artifact_chat.py  test_artifact_manager.py  test_artifact_routes.py  test_artifact_tools.py  test_artifacts.py  test_auth.py  test_base_agent.py  test_benchmark_engine.py  test_brain_routes.py  test_brain_server.py  test_brain_tools.py  test_chat_routes.py  test_content_schemas.py  test_delegation_tools.py  test_diff_engine.py  test_document_exporters.py  test_documents.py  test_engine_tools.py  test_entity_extractor.py  test_event_store.py  test_exporters.py  test_extraction.py  test_intent_classifier.py  test_knowledge_graph.py  test_metrics.py  test_moe_router.py  test_new_agents.py  test_pptx_exporter.py  test_rag_retriever.py  test_readiness_scorer.py  test_research_tools.py  test_scenario_modeler.py  test_skill_loader.py  test_skill_tools.py  test_startup_brain.py  test_streaming.py  test_success_story_matcher.py  (+5 more)
(+190 files in other folders)
