[tool.poetry]
name = "ai-vc-copilot"
version = "1.0.0"
description = "AI VC Co-Pilot Platform Backend"
authors = ["AI VC Co-Pilot Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"

# FastAPI & Web
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
python-multipart = "^0.0.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.27.0"

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pgvector = "^0.2.5"
redis = "^5.0.4"

# AI/ML
anthropic = "^0.28.0"
openai = "^1.30.0"
# langchain deps deferred to Phase 2 (document processing)
# langchain = "^0.2.0"
# langchain-anthropic = "^0.1.15"
# langchain-openai = "^0.1.8"
# langchain-community = "^0.2.0"
# sentence-transformers = "^3.0.0"

# Document Processing (Phase 2 - deferred due to Python version constraints)
# unstructured = {extras = ["all-docs"], version = "^0.14.0"}
pypdf = "^4.2.0"
python-pptx = "^0.6.23"
python-docx = "^1.1.0"
openpyxl = "^3.1.2"
pandas = "^2.2.2"

# Task Queue
celery = {extras = ["redis"], version = "^5.4.0"}

# Utilities
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
structlog = "^24.2.0"
tenacity = "^8.3.0"
python-slugify = "^8.0.4"
boto3 = "^1.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
factory-boy = "^3.3.0"
faker = "^25.0.0"
ruff = "^0.4.4"
mypy = "^1.10.0"
aiosqlite = "^0.20.0"


[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
